Fixed vert-align of day numbers.

--- a/apps/web/assets/styles.scss
+++ b/apps/web/assets/styles.scss
@@ -57,6 +57,7 @@
       height: 2em;
       span {
         max-width: calc(100%/7);
+        padding-top: .4rem;
         flex: 1;
         text-align: center;
       }
